--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,18 @@
 		    <artifactId>discord4j-core</artifactId>
 		    <version>3.2.3</version>
 		  </dependency>
+		<dependency>
+		    <groupId>javax.json</groupId>
+		    <artifactId>javax.json-api</artifactId>
+		    <version>1.1.4</version>
+		</dependency>
+<dependency>
+    <groupId>org.glassfish</groupId>
+    <artifactId>javax.json</artifactId>
+    <version>1.1.4</version>
+</dependency>
+
+	  
 	</dependencies>
 
 	<build>
