--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>3.0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>6.0.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
